--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -95,20 +95,6 @@ header {
     margin-top: 15px;
 }
 
-main section article i {
-    display: block;
-    font-size: 16px;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
-    border: solid 1px #39b54a;
-    background-color: #fff;
-    border-radius: 50%;
-    position: relative;
-    right: 20px;
-    top: -15px;
-}
-
 main {
     margin: auto;
     background-color: #ebebeb;
@@ -133,27 +119,48 @@ h2 {
     flex-flow: column;
     flex-wrap: nowrap;
 }
+.productos:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    transition: border 0.5s;
+}
+
+main section article i {
+    display: block;
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: solid 1px #39b54a;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    right: 20px;
+    top: -15px;
+}
+
+
 
 .camion {
-    padding: 0px 50px;
+    padding: 10px 0px;
     margin-top: 0px;
     margin-bottom: 20px;
     border-top: solid 1px #ebebeb;
-    text-align: center;
     display: flex;
     flex-flow: column;
+    justify-content: flex-start;
+    position: relative;
 }
 
 .camion-detalle {
-    padding: 10px;
     color: #39b54a;
-    font-size: 16px;
-    flex-grow: 1;
-    text-align: right;
 }
 
 .detalle {
+    margin-top: 10px;
+    margin-left: 10px;
     display: flex;
+    flex-flow: row;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
@@ -179,6 +186,11 @@ h2 {
     color: #666;
     text-align: left;
     flex: 5 1 100%;
+}
+
+.descripcion:hover {
+    opacity: 1;
+    transition: opacity 0.5s;
 }
 
 footer {
@@ -210,22 +222,46 @@ footer p {
     padding-bottom: 10px;
 }
 
+
+
+.container-log {
+    display: flex;
+    flex-flow: column;
+    margin-left: 6%;
+}
+
 .send-button {
     background-color: #1259c3;
     color: #fff;
-    width: 90%;
-    height: 35px;
+    width: 100%;
+    height: 30px;
     border: none;
     border-radius: 4px;
     font-size: 14px;
     font-weight: bold;
 }
 
-.form-container,
-.login-form {
+.send-button:hover {
+    background-color: #0022aa;
+    transition: 0.5s;
+}
+
+.boton-send:hover {
+    background-color: #0022aa;
+    transition: 0.5s;
+}
+
+.register-container {
     display: flex;
     flex-flow: column;
-    margin-top: 30px;
+    margin-left: 6%;
+}
+
+.register-form,
+.login-form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
     width: 90%;
     justify-content: center;
     margin-bottom: 15px;
@@ -234,75 +270,119 @@ footer p {
 .name-lastname,
 .username,
 .email,
-.password,
-.adress {
-    margin-bottom: 35px;
-    width: 250px;
+.birthday,
+.address,
+.password {
+    display: flex;
+    justify-content: center;
+    padding-left: 10px;
+    margin-bottom: 25px;
+    width: 100%;
     height: 28px;
     border: none;
     border-radius: 5px;
 }
 
-.name-lastname::-webkit-input-placeholder {
+.titulado {
+    margin: 20px 0px 15px 3px;
+}
+
+.usuario {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
+.radio-item {
+    margin-left: 5px;
+}
+
+.radio-label {
     margin-left: 10px;
-    color: #666;
 }
 
-.username::-webkit-input-placeholder {
-    margin-left: 10px;
-    color: #666;
+.checkslist {
+    margin-top: 15px;
+    display: flex;
+    flex-flow: column;
+    width: 50%;
+    flex-wrap: wrap;
 }
 
-.email::-webkit-input-placeholder {
-    margin-left: 10px;
-    color: #666;
+.check-item {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 20px;
 }
 
-.password::-webkit-input-placeholder {
-    margin-left: 10px;
-    color: #666;
+.check-label {
+    margin-left: 7px;
 }
 
-.adress::-webkit-input-placeholder {
-    margin-left: 10px;
-    color: #666;
+.userpic {
+    margin: 3px 0px 30px 10px;
 }
 
-.name-lastname::-moz-placeholder {
-    font-size: 12px;
-    color: #666;
+.botones {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: wrap;
 }
 
-.username::-moz-placeholder {
-    font-size: 12px;
-    color: #666;
+.boton-send {
+    background: #1259c3;
+    border: none;
+    border-radius: 3px;
+    height: 30px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
 
-.email::-moz-placeholder {
-    font-size: 12px;
-    color: #666;
+.reset-button {
+    background: #fff;
+    width: 100%;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    height: 30px;
 }
 
-.password::-moz-placeholder {
-    font-size: 12px;
-    color: #666;
+.send-button {
+    text-decoration: none;
 }
-
-.adress::-moz-placeholder {
-    font-size: 12px;
-    color: #666;
-}
-
 
 
 @media (min-width: 361px) {
 
+    .contenedor-logo-busqueda {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .cuotas {
+        justify-content: center;
+        align-self: center;
+        flex: 0 1 auto;
+    }
+    .leyenda {
+        width: 30%;
+        margin-right: 15px;
+    }
+    .boton-busqueda {
+        text-align: center;
+        justify-content: center;
+        flex: 1 1 auto;
+    }
+    .casillero {
+        width: 150px;
+    }
     .navbar {
         margin-top: 25px;
         margin-bottom: 0px;
         visibility: visible;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
     }
     .contenedor-burger {
         display: none;
@@ -313,26 +393,31 @@ footer p {
         text-decoration: none;
         color: black;
         text-align: left;
-        margin-left: 20px;
     }
+    .barra-nav1,
     .barra-nav2 {
-        margin-right: 30px;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
     }
- 
-
-
-
+    .lista1,
+    .lista2,
+    .lista3,
+    .lista4,
+    .lista5,
+    .lista6,
+    .lista7 {
+        font-size: 8px;
+        padding: 3px;
+    }
     .contenedor-productos {
         display: flex;
         flex-wrap: wrap;
     }
     .productos {
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
         width: 40%;
     }
-    .descripcion {
-        visibility: visible;
-    }
+    
 }
 
 
@@ -346,74 +431,59 @@ footer p {
     }
    
 
-    .contenedor-logo-busqueda {
-        display: flex;
-        justify-content: space-between;
-    }
     .logo {
-        flex: 1 1 auto;
-        max-width: 380px;
-    }
-    .boton-busqueda {
-        align-self: center;
-        flex: 2 1 auto;
-        text-align: center;
+        margin-left: 20px;
+        flex: 1 1 30%;
     }
     .cuotas {
-        align-self: center;
-        flex: 1 1 auto;
-        text-align: center;
+        flex: 1 1 40%;
     }
-    .navbar {
-        margin-top: 25px;
-        margin-bottom: 0px;
-        visibility: visible;
-        display: flex;
-        justify-content: space-between;
+    .boton-busqueda {
+        justify-content: space-around;
+        flex: 1 1 60%;
+        margin-top: 10px;
     }
-    .barra-nav1 {
-        display: flex;
-        flex-flow: row;
-        align-self: center;
-        text-align: center;
-        justify-content: space-between;
+    .casillero {
+        flex: 1 1 70%;
+        width: 350px;
+        height: 24px;
     }
-    .barra-nav2 {
-        display: flex;
-        flex-flow: row;
-        align-self: center;
-        text-align: center;
-        justify-content: space-between;
-        margin-right: 30px;
-    }
-    .lista1,
-    .lista2,
-    .lista3,
-    .lista4,
-    .lista5,
-    .lista6,
-    .lista7 {
-        flex-grow: 0.5;
+    .boton {
+        padding: 3px 5px;
     }
     .contenedor-burger {
         display: none;
     }
-   
+    .barra-nav1 {
+        flex-wrap: wrap;
+        justify-content: space-around;
+        flex: 1 1 50%;
+        margin-right: 5%;
+    }
+    .barra-nav2 {
+        flex-wrap: wrap;
+        justify-content: space-around;
+        flex: 1 1 50%;
+        margin-left: 5%;
+    }
 
     .contenedor-productos {
         display: flex;
         flex-wrap: wrap;
     }
     .productos {
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
         width: 21%;
     }
     .descripcion {
         visibility: visible;
     }
-  
-    .contenedor-pies {
-        display: flex;
-        justify-content: space-around;
-    }
+
+.contenedor-pies {
+    display: flex;
+    justify-content: space-around;
+}
+.icono:hover {
+    color: #39b54a;
+    transition: color 0.5s;
+}
 }
