--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,66 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <%- include('partials/head') %>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href='/css/styles.css' />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-        
-       
-        <title>Mercado Liebre</title>
-    </head>
-
-<body>
-  <header>
-    <div class="contenedor-logo-busqueda">
-        <img src="images/logo-mercado-liebre.svg" class="logo" alt="Logo MercadoLiebre" width="360px"> 
-        <article class="boton-busqueda">
-            <div class="contenedor-buscador">
-            <form action="" class="busqueda" method="post" target="_blank">
-                <input type="search" placeholder="Buscar productos, marcas, etc." size="30px" class="casillero">
-            </form>
-            </div>
-            <div class="contenedor-boton">
-            <button type="submit" class="boton"><i class="fas fa-search"></i></button>
-            </div>
-        </article>
-        <div class="cuotas">
-            <i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito
-        </div>
-    </div>   
-    <br>
-
-    <section class="contenedor-links">
-        <nav class="navbar">
-            <ul type="none" class="barra-nav1">
-                <li class="lista1"><a href="#ofertas">Ofertas</a></li>
-                <li class="lista2"><a href="#">Tiendas Oficiales</a></li>
-                <li class="lista3"><a href="#">Vender</a></li>
-                <li class="lista4"><a href="#">Ayuda</a></li>
-            </ul>
-            <ul type="none" class="barra-nav2">
-                <li class="lista5"><a href="register.html">Creá tu cuenta <i class="far fa-id-card icon-nav"></i></a></li>
-                <li class="lista6"><a href="login.html">Ingresá <i class="fas fa-sign-in-alt icon-nav"></i></a></li>
-                <li class="lista7"><a href="#">Mis compras <i class="fas fa-shopping-basket icon-nav"></i></a></li>
-            </ul>
-        </nav>
-        <article class="contenedor-burger">
-            <div class="burger-menu">
-                <a href=""><i class="fa fa-bars burger"></i></a>
-            </div>
-        </article>
-    </section>
-    
-    <section>
-        <img src="/images/img-home-banner.jpg" width="100%" class="banner" alt="Banner de ofertas">
-    </section>
-</header>
-    
+  <body>
+  
+  <%- include('partials/header') %>
+     <section>
+       <img src="/images/img-home-banner.jpg" width="100%" class="banner" alt="Banner de ofertas">
+     </section>
 <main>
         <section class="ultima visita">
 
@@ -207,49 +154,7 @@
         </section>
     </main>
 
-
-    <footer>
-        <section class="contenedor-pies" >
-            <article class="pie">
-                <div>
-                    <i class="fas fa-credit-card icono"></i>
-                </div>
-                <div class="texto">
-                 <h3>Pagá con tarjeta o en efectivo</h3>
-                 <p>Con Mercado Liebre Cash, tenés cuotas sin<br>
-                  interés con tarjeta o efectivo en puntos de<br>
-                  pago. ¡Y siempre es seguro!</p>
-                </div>  
-            </article>
-        
-            <article class="pie">
-                <div>
-                    <i class="fas fa-gift icono"></i>
-                </div>
-                <div class="texto">
-                 <h3>Envío gratis desde $2.500</h3>
-                 <p>Solo por estar registrad@ en Mercado Liebre<br>
-                 tenés envíos gratis en miles de productos. Es<br>
-                 un beneficio de Mercado Puntos.</p>
-            </article>
-        
-            <article class="pie">
-                <div>
-                    <i class="fas fa-user-shield icono"></i>
-                </div>
-                <div class="texto">
-                 <h3>Seguridad de principio a fin</h3>
-                 <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre<br>
-                no hay nada que no puedas hacer porque<br>
-                estás siempre protegid@</p>
-                </div>
-            </article>
-        </section>
-        <section class="copyright">
-            <article class="texto">
-               <h5>Copyright © 1999-2021 MercadoLiebre S.R.L.</h5>
-            </article>
-        </section>
-    </footer>
+    <%- include('partials/footer') %>
+    
 </body>
 </html>
